removed __pycache__, logs, and training,
changed data files dir to
inputDataPrefix =  "/home/kbunkow/cms_data

--- a/omtf_nn/LUT_NN_training.ipynb
+++ b/omtf_nn/LUT_NN_training.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-06 21:54:54.824030: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-04-07 12:42:47.823525: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -115,9 +115,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-06 21:54:56.990001: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:267] failed call to cuInit: UNKNOWN ERROR (34)\n",
-      "2023-04-06 21:54:56.990054: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (73e1d29a6fac): /proc/driver/nvidia/version does not exist\n",
-      "2023-04-06 21:54:56.990388: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-04-07 12:42:50.144447: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:267] failed call to cuInit: UNKNOWN ERROR (34)\n",
+      "2023-04-07 12:42:50.144498: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (73e1d29a6fac): /proc/driver/nvidia/version does not exist\n",
+      "2023-04-07 12:42:50.144833: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -132,6 +132,15 @@
     "#trainDataDir = \"/scratch_ssd/akalinow/ProgrammingProjects/MachineLearning/OMTF/data/18_12_2020/\"   \n",
     "trainDataDir = \"/home/kbunkow/cms_data/OMTF_data_2020/18_12_2020/\"\n",
     "trainFileNames = glob.glob(trainDataDir+'OMTFHits_pats0x0003_oldSample_files_*_chunk_0.tfrecord.gzip')\n",
+    "\n",
+    "#inputDataPrefix =  \"/eos/user/a/akalinow/Data/SingleMu/TFRecord/\"\n",
+    "inputDataPrefix =  \"/home/kbunkow/cms_data/SingleMu/TFRecord\"\n",
+    "\n",
+    "trainDataDir = inputDataPrefix #+\"/ProgrammingProjects/MachineLearning/OMTF/data/18_12_2020/\"   \n",
+    "testDataDir = inputDataPrefix #+\"/ProgrammingProjects/MachineLearning/OMTF/data/18_12_2020/\" \n",
+    "\n",
+    "trainFileNames= glob.glob(trainDataDir+'SingleMu_OneOverPt_Feb15_chunk_0_filtered.tfrecord.gzip')\n",
+    "testFileNames = glob.glob(trainDataDir + 'SingleMu_OneOverPt_Feb22_chunk_0_filtered.tfrecord.gzip')\n",
     "\n",
     "dataset = io.get_LUT_NN_dataset(batchSize, nEpochs, trainFileNames, \n",
     "                                nRefLayers=nRefLayers,\n",
@@ -158,39 +167,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "constructing LutInterLayer  layer1 lut_size 1024 num_inputs 19 num_outputs 16 input_offset 0 self.input_offset 0 last_input_is_bias True\n",
-      "write_lut_hist False hist_writer None\n",
-      "constructing LutInterLayer  layer2 lut_size 256 num_inputs 16 num_outputs 8 input_offset 8.0 self.input_offset 8.0 last_input_is_bias False\n",
-      "write_lut_hist False hist_writer None\n",
-      "constructing LutInterLayer  layer3 lut_size 32 num_inputs 8 num_outputs 1 input_offset None self.input_offset 15.5 last_input_is_bias False\n",
-      "write_lut_hist False hist_writer None\n",
-      "layer1 \n",
-      "LutInterLayer.build: luts_float: layer1.luts_float:0 shape (18, 1024, 16)\n",
-      "WARNING:tensorflow:From /home/kbunkdoc/.local/lib/python3.8/site-packages/tensorflow/python/autograph/pyct/static_analysis/liveness.py:83: Analyzer.lamba_check (from tensorflow.python.autograph.pyct.static_analysis.liveness) is deprecated and will be removed after 2023-09-23.\n",
-      "Instructions for updating:\n",
-      "Lambda fuctions will be no more assumed to be used in the statement where they are used, or at least in the same block. https://github.com/tensorflow/tensorflow/issues/56089\n",
-      "layer2 \n",
-      "LutInterLayer.build: luts_float: layer2.luts_float:0 shape (16, 256, 8)\n",
-      "layer3 \n",
-      "LutInterLayer.build: luts_float: layer3.luts_float:0 shape (8, 32, 1)\n",
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " layer1 (LutInterLayer)      (None, 16)                313344    \n",
-      "                                                                 \n",
-      " layer2 (LutInterLayer)      (None, 8)                 36864     \n",
-      "                                                                 \n",
-      " layer3 (LutInterLayer)      (None, 1)                 512       \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 350,720\n",
-      "Trainable params: 327,936\n",
-      "Non-trainable params: 22,784\n",
-      "_________________________________________________________________\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lutnn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_30871/878463908.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmodel_functions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mimportlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_LUT_NN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_input_is_bias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlast_input_is_bias\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mloss_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/kbunkow/projects/machine_learning_projects/omtf_nn_py/omtf_nn/model_functions.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#import LutInterLayer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlutnn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLutInterLayer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0marchitecture_definitions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lutnn'"
      ]
     }
    ],
@@ -212,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a48d01be-95ac-416b-8577-c23d3f8924b0",
    "metadata": {},
    "outputs": [
