* add instruction to connect machine_learning_projects/lutnn_py repository * update data file paths

--- a/omtf_nn/Classic_NN_performance.ipynb
+++ b/omtf_nn/Classic_NN_performance.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c07350e0-28d8-4ab0-b836-b6d46382c923",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "05447793-4028-457b-8559-8d3f07811e5e",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,27 @@
      "output_type": "stream",
      "text": [
       "Reading data from files:\n",
-      "/scratch_cmsse/alibordi/data/test/SingleMu_iPtX_Feb22_chunk_0_filtered.tfrecord.gzip\n"
+      "/scratch_cmsse/alibordi/data/test/SingleMu_iPtX_Feb15_Unfiltered.tfrecord.gzip\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-19 11:32:55.646496: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.652019: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.652165: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.652635: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-04-19 11:32:55.653397: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.653506: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.653598: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.959406: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.959527: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.959621: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-04-19 11:32:55.959701: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 16 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2070 SUPER, pci bus id: 0000:01:00.0, compute capability: 7.5\n",
+      "2023-04-19 11:32:55.962499: I tensorflow/stream_executor/cuda/cuda_driver.cc:739] failed to allocate 16.50M (17301504 bytes) from device: CUDA_ERROR_OUT_OF_MEMORY: out of memory\n",
+      "2023-04-19 11:32:55.962790: I tensorflow/stream_executor/cuda/cuda_driver.cc:739] failed to allocate 14.85M (15571456 bytes) from device: CUDA_ERROR_OUT_OF_MEMORY: out of memory\n"
      ]
     }
    ],
@@ -58,7 +78,7 @@
     "testFileNames = glob.glob(testDataDir+'OMTFHits_pats0x0003_newerSample_files_1_100_chunk_0.tfrecord.gzip')\n",
     "\n",
     "testDataDir = \"/scratch_cmsse/alibordi/data/test/\"\n",
-    "testFileNames = glob.glob(testDataDir+'SingleMu_iPtX_Feb22_chunk_0_filtered.tfrecord.gzip')\n",
+    "testFileNames = glob.glob(testDataDir+'SingleMu_iPtX_Feb15_Unfiltered.tfrecord.gzip')\n",
     "\n",
     "dataset = io.get_Classic_NN_dataset(batchSize, nEpochs, testFileNames, isTrain=False)"
    ]
@@ -73,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d9adb735-2991-4d9d-8485-c3688ac87146",
    "metadata": {},
    "outputs": [
@@ -82,23 +102,8 @@
      "output_type": "stream",
      "text": [
       "Using training set: 2023_Apr_19_09_31_47_classic_128_64_48_1\n",
-      "Model: \"sequential_1\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " pt_layer_1 (Dense)          (None, 128)               4864      \n",
-      "                                                                 \n",
-      " pt_layer_2 (Dense)          (None, 64)                8256      \n",
-      "                                                                 \n",
-      " pt_layer_3 (Dense)          (None, 48)                3120      \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 1)                 49        \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 16,289\n",
-      "Trainable params: 16,289\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "INFO:tensorflow:Mixed precision compatibility check (mixed_float16): OK\n",
+      "Your GPU will likely run quickly with dtype policy mixed_float16 as it has compute capability of at least 7.0. Your GPU: NVIDIA GeForce RTX 2070 SUPER, compute capability 7.5\n"
      ]
     }
    ],
