* actually update README file

--- a/omtf_nn/LUT_NN_training.ipynb
+++ b/omtf_nn/LUT_NN_training.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a48d01be-95ac-416b-8577-c23d3f8924b0",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,25 @@
       "Epoch 43/50\n",
       "770/770 [==============================] - 17s 22ms/step - loss: 60.2573 - val_loss: 6.3422\n",
       "Epoch 44/50\n",
-      "234/770 [========>.....................] - ETA: 11s - loss: 53.5034"
+      "770/770 [==============================] - 17s 22ms/step - loss: 60.3288 - val_loss: 6.4794\n",
+      "Epoch 45/50\n",
+      "770/770 [==============================] - 17s 22ms/step - loss: 60.3982 - val_loss: 6.6227\n",
+      "Epoch 46/50\n",
+      "770/770 [==============================] - 17s 21ms/step - loss: 60.3900 - val_loss: 6.7784\n",
+      "Epoch 47/50\n",
+      "172/770 [=====>........................] - ETA: 12s - loss: 39.4200\n",
+      "Epoch 47: saving model to training/2023_Apr_19_11_06_06_lut_16_8_1/cp-0047.ckpt\n",
+      "770/770 [==============================] - 17s 22ms/step - loss: 60.3787 - val_loss: 6.9408\n",
+      "Epoch 48/50\n",
+      "770/770 [==============================] - 17s 22ms/step - loss: 60.3618 - val_loss: 7.1181\n",
+      "Epoch 49/50\n",
+      "770/770 [==============================] - 17s 21ms/step - loss: 60.3239 - val_loss: 7.3004\n",
+      "Epoch 50/50\n",
+      "770/770 [==============================] - 17s 22ms/step - loss: 60.2358 - val_loss: 7.4693\n",
+      "INFO:tensorflow:Assets written to: training/2023_Apr_19_11_06_06_lut_16_8_1/assets\n",
+      "Training end. Current Time = 2023_Apr_19_11_20_13\n",
+      "CPU times: user 50min 17s, sys: 11min 45s, total: 1h 2min 3s\n",
+      "Wall time: 14min 7s\n"
      ]
     }
    ],
