* update classic NN architectire to have always 1/2 neutron in the next layer * update training/testing dataset * update IO_tests with cell for dataset statistics * use custom loss function: MAE+MAPE

--- a/omtf_nn/Efficiency_plots.ipynb
+++ b/omtf_nn/Efficiency_plots.ipynb
@@ -359,7 +359,7 @@
     "path = \"/home/kbunkow/cms_data/SingleMu/TFRecord/*parquet*iPt2*Feb*\"\n",
     "fileNames = fileNames + glob.glob(path)\n",
     "\n",
-    "print(colored(\"Inpus files:\",\"blue\"),fileNames)\n",
+    "print(colored(\"Input files:\",\"blue\"),fileNames)\n",
     "\n",
     "df = pd.read_parquet(fileNames[0])\n",
     "\n",
